--- a/www/one-company-page.html
+++ b/www/one-company-page.html
@@ -108,8 +108,22 @@
             <div class="block b-one-company">
               <div class=" b-one-company__title">
                 <div class="b-one-company__title-note">
-                  <p class="b-one-company__tag text subtext"><a href="#" title="Sector" class="tag">Мойки</a></p>
-                  <h1 id="nameCompany">Рога и копыта</h1>
+                  <div class="b-one-company__title-note-top">
+                    <h1 id="nameCompany">Рога и копыта</h1>
+                    <div class="wrap-rating text">
+                      <p class="rating-stars">
+          <!-- Рейтинг добавить аттрибут 
+               "data-aсtive" - целая звезда
+         -->
+                        <span data-active=""></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                      </p>
+                      <p class="print-rating text bold"></p>
+                    </div>
+                  </div>
                   <p class="b-one-company__short-about lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorem eius deserunt libero distinctio, iusto illum repellendus commodi unde, dolores facere repudiandae. Nisi unde blanditiis sunt porro officiis, nostrum et!</p>
                 </div>
                 <img src="img/temp/logo-company/1.svg" alt="" class="b-one-company__title-logo">
@@ -168,7 +182,7 @@
                   <img src="img/temp/auto/9.png" alt="">
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
-                    <h5 data-clamp><a href="#" data-clamp>Новость 1</a></h5>
+                    <h5 data-clamp><a href="one-item-news.html" data-clamp>Новость 1</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
                   </div>
@@ -178,7 +192,7 @@
                   <img src="img/temp/auto/8.png" alt="">
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
-                    <h5 data-clamp><a href="#">Новость 2</a></h5>
+                    <h5 data-clamp><a href="one-item-news.html">Новость 2</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
                   </div>
                 </div>
@@ -187,7 +201,7 @@
                   <img src="img/temp/auto/7.png" alt="">
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
-                    <h5 data-clamp><a href="#">Новость 3 em ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</a></h5>
+                    <h5 data-clamp><a href="one-item-news.html">Новость 3 em ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
                   </div>
@@ -197,7 +211,7 @@
                   <img src="img/temp/auto/6.png" alt="">
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
-                    <h5 data-clamp><a href="#">Новость 4</a></h5>
+                    <h5 data-clamp><a href="one-item-news.html">Новость 4</a></h5>
                     <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</p>
                   </div>
@@ -218,7 +232,6 @@
 
           <section class="l-similar col xs-3">
             <div class="block b-similar">
-              <h4><span>100</span> похожих компаний</h4>
               <div class="b-similar__wrapp">
                 <div class="b-similar__item">
                   <img src="img/temp/logo-company/2.jpg" alt="" class="b-similar__item-img">
@@ -249,11 +262,11 @@
           <section class="l-comment col xs-9">
             <div class="block b-comment">
               <div class="b-comment-wrapp paginator">
-                <h3>Комментарии</h3>
+                <h3>Отзывы</h3>
 
                 <div class="b-comments">
                   <div class="alert-register">
-                    <h5>Участвовать в обсуждениях могут только зарегистрированные пользователи.</h5>
+                    <h5>Оставлять отзывы могут только зарегистрированные пользователи</h5>
                     <p class="alert-register__buttons">
                       <button class="button middle button-registration">Зарегистрироваться</a>
                       <button class="button middle button-enter">Войти</a>
