--- a/www/add-blog.html
+++ b/www/add-blog.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/slim.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css"> 
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist1.css"> 
     <link rel="stylesheet" type="text/css" href="css/styles-add-blog.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -32,11 +32,13 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery.dropList.1.0.0.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/slim.jquery.min.js"></script>
-    <script type="text/javascript" src="js/script-droplist.js"></script>
+    <!-- <script type="text/javascript" src="js/script-droplist.js"></script> -->
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
   </head>
@@ -109,30 +111,28 @@
               </div>
               <form role="form" action="/user/addpost" method="POST" enctype="multipart/form-data" class="b-add-blog__form" name="add-blog">
 
+              <div class="b-add-blog__form-item m-form-item-inline">
+                <span class="b-form-item-title text bold">Рубрика</span>
+                <div id="wrapperTag" class="droplist">
+                  <select id="tag" multiple>
+                    <option>Личное</option>
+                    <option>Хобби</option>
+                    <option>Путешествия</option>
+                  </select>
+                </div>
+              </div>
+
               <div class="b-add-blog__form-item m-form-item-inline text">
                 <p class="b-form-item-title"><label for="title" class="text">Название поста</label></p>
                 <p><input type="text" id="title" name="title" class="tab-input"></p>
               </div>
 
               <div class="b-add-blog__form-item m-form-item-inline">
-                <span class="b-form-item-title text bold">Тэг</span>
-                <div class="droplist">
-                  <input type="text" id="tag" name="tag" value="" hidden>
-                  <span class="droplist-current text bold tab-input">Выбрать</span>
-                  <ul class="droplist-block">
-                    <li class="droplist-item text">Личное</li>
-                    <li class="droplist-item text">Хобби</li>
-                    <li class="droplist-item text">Путешествия</li>
-                  </ul>
-                </div>
-              </div>
-
-               <div class="b-add-blog__form-item m-form-item-inline">
                 <p class="b-form-item-title"><label for="title" class="text">Фото обложки</label></p>
                 <div id="postMainPhotoSlim"
                   data-label="Drop photo here"
                   data-size="800,400"
-                  data-ratio="2:1"
+                  data-ratio="16:9"
                   class="b-form-item-add-photo text">
                   <input type="file" name="mainphoto" required />
                 </div>
