--- a/www/add-company.html
+++ b/www/add-company.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/slim.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist1.css">
     <link rel="stylesheet" type="text/css" href="css/styles-add-company.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -33,6 +33,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery.dropList.1.0.0.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
@@ -127,14 +129,25 @@
 
                 <div class="b-add-company__form-item m-form-item-inline">
                   <div class="b-form-item-title text bold">Категория</div>
-                  <div class="droplist">
-                    <input type="text" name="category" id="category" value="" style="opacity: 0; width: 0;">
-                    <span class="droplist-current text bold tab-input">Выбрать</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Cars</li>
-                      <li class="droplist-item text">Rims</li>
-                      <li class="droplist-item text">Tyres</li>
-                    </ul>
+                  <div id="wrapperCategory" class="droplist">
+                    <select id="category">
+                      <option data-title value="all">Категории</option>
+                      <option>Rims</option>
+                      <option>Cars</option>
+                      <option>Tyres</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="b-add-company__form-item m-form-item-inline">
+                  <div class="b-form-item-title text bold">Теги компании</div>
+                  <div id="wrapperTag" class="droplist">
+                    <select id="tag" multiple>
+                      <option data-title>Сервис</option>
+                      <option>Rims</option>
+                      <option>Cars</option>
+                      <option>Tyres</option>
+                    </select>
                   </div>
                 </div>
 
@@ -145,23 +158,22 @@
 
                 <div class="b-add-company__form-item m-form-item-inline">
                   <div class="b-form-item-title text bold">Город/Район</div>
-                  <div class="droplist">
-                    <input type="text" name="city" id="city" value="" style="opacity: 0; width: 0;">
-                    <span class="droplist-current text bold tab-input">Выбрать город</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Kalamata</li>
-                      <li class="droplist-item text">Patra</li>
-                      <li class="droplist-item text">Athens</li>
-                    </ul>
+                  <div id="wrapperCity" class="droplist">
+                    <select id="city">
+                      <option data-title value="all">Все города</option>
+                      <option>Kalamata</option>
+                      <option>Patra</option>
+                      <option>Athens</option>
+                    </select>
                   </div>
-                  <div class="droplist" hidden>
-                    <input type="text" name="district" id="district" value="" hidden>
-                    <span class="droplist-current text bold tab-input">Выбрать район</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Ilion</li>
-                      <li class="droplist-item text">Petroupoli</li>
-                      <li class="droplist-item text">Peristeri</li>
-                    </ul>
+
+                  <div id="wrapperDistrict" class="droplist" hidden>
+                    <select id="district">
+                        <option data-title value="all">Все районы</option>
+                        <option>Ilion</option>
+                        <option>Petroupoli</option>
+                        <option>Peristeri</option>
+                    </select>
                   </div>
                 </div>
 
@@ -214,7 +226,7 @@
 
         </div>
       <script type="text/javascript" src="js/slim.jquery.min.js"></script>
-      <script type="text/javascript" src="js/script-droplist.js"></script>
+      <!-- <script type="text/javascript" src="js/script-droplist.js"></script> -->
       <script type="text/javascript" src="js/script-add-company.js"></script>
 <!-- Footer -->
       </div>
