--- a/www/add-new-ad.html
+++ b/www/add-new-ad.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/slim.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist1.css">
     <link rel="stylesheet" type="text/css" href="css/styles-add-ad.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -33,6 +33,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery.dropList.1.0.0.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
@@ -127,15 +129,34 @@
 
                 <div class="b-add-ad__form-item m-form-item-inline">
                   <div class="b-form-item-title text bold">Категория</div>
-                  <div class="droplist">
-                    <input type="text" name="category" id="category" value="" style="opacity: 0; width: 0;">
-                    <span class="droplist-current text bold tab-input">Выбрать</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Cars</li>
-                      <li class="droplist-item text">Rims</li>
-                      <li class="droplist-item text">Tyres</li>
-                    </ul>
+                  <div id="wrapperCategory" class="droplist">
+                    <select id="category">
+                      <option>Rims</option>
+                      <option>Cars</option>
+                      <option>Tyres</option>
+                    </select>
                   </div>
+
+                  <div id="wrapperCar" class="droplist" name="Cars" hidden>
+                    <select id="car-mark">
+                      <option>BMW</option>
+                      <option>Volvo</option>
+                      <option>Saab</option>
+                      <option>Mercedes</option>
+                      <option>Audi</option>
+                    </select>
+                  </div>
+
+                  <div id="wrapperModel" class="droplist" name="Model" hidden>
+                    <select id="car-model">
+                      <option>BMW</option>
+                      <option>Volvo</option>
+                      <option>Saab</option>
+                      <option>Mercedes</option>
+                      <option>Audi</option>
+                    </select>
+                  </div>
+
                 </div>
 
                 <div class="b-add-ad__form-item m-form-item_textarea m-form-item-inline">
