--- a/www/company.html
+++ b/www/company.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/paginator.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist1.css">
     <link rel="stylesheet" type="text/css" href="css/styles-aside-filter.css">
     <link rel="stylesheet" type="text/css" href="css/styles-company.css">
     
@@ -36,6 +36,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery.dropList.1.0.0.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
@@ -49,6 +51,12 @@
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-7">
+          <!-- На активный пункт меню навесить класс .active -->
+            <li><a href="/main.html" title="Главная" class="text bold">Главная</a></li>
+            <li><a href="/news.html" title="Новости" class="text bold">Новости</a></li>
+            <li><a href="/community.html" title="Сообщества" class="text bold">Сообщества</a></li>
+            <li><a href="/company.html" title="Компании" class="text bold active">Компании</a></li>
+            <li><a href="/flea-market.html" title="Барахолка" class="text bold">Барахолка</a></li>
         </ul>
 
         <button class="b-menu__wrapp-login button small text bold col xs-offset-2 xs-1 button-enter" style="display: none;">Войти</button>
@@ -110,12 +118,11 @@
             <div class="block b-company paginator">
 
               <div class="b-main-title title-search">
-                  <h1>Компании</h1>
+                  <h3>Все отрасли</h3>
                 <form name="search" class="b-filter__find">
                   <input type="text" name="search">
                 </form>
               </div>
-              <h3>Тюниг и прокачка авто <span>12</span></h3>
 
               <div class="b-company__container pagin-container pagin-wrap">
 
@@ -345,81 +352,37 @@
 
               <div class="block b-filter">
                 <div class="b-filter-wrapp">
-                  <h4><span>256</span> компаний</h4>
-                  <p class="text"><a href="#"><span>12</span> новых</a></p>
+                  <!-- <h4><span>256</span> компаний</h4> -->
                   <form class="b-filter__form" name="filter">
-                    <div class="b-filter__form-item droplist">
-                      <input type="text" id="sector" value="all" hidden>
-                      <span class="droplist-current text bold tab-input">Выбрать отрасль</span>
-                      <ul class="droplist-block">
-                        <li class="droplist-item text">Сервисы</li>
-                        <li class="droplist-item text">Мойки</li>
-                        <li class="droplist-item text">Шиномонтаж</li>
-                      </ul>
+                  
+                    <div id="wrapperCategory" class="b-filter__form-item droplist">
+                      <select id="category">
+                        <option data-title value="all">Все отрасли</option>
+                        <option>Сервисы</option>
+                        <option>Авто</option>
+                        <option>Авто</option>
+                        <option>Мото</option>
+                      </select>
                     </div>
-                    <div class="b-filter__form-item droplist">
-                      <input type="text" id="city" value="all" hidden>
-                      <span class="droplist-current text bold tab-input">Все города</span>
-                      <ul class="droplist-block">
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Paris</li>
-                        <li class="droplist-item text">Odessa</li>
-                        <li class="droplist-item text">Kiev</li>
-                        <li class="droplist-item text">Paris</li>
-                      </ul>
+
+                    <div id="wrapperCity" class="b-filter__form-item droplist">
+                      <select id="city">
+                        <option data-title value="all">Все города</option>
+                        <option>Odessa</option>
+                        <option>Kiev</option>
+                        <option>Paris</option>
+                      </select>
                     </div>
-                    <div class="b-filter__form-item droplist">
-                      <input type="text" id="driver" value="all" hidden>
-                      <span class="droplist-current text bold tab-input">Все районы</span>
-                      <ul class="droplist-block">
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                        <li class="droplist-item text">Район</li>
-                      </ul>
+
+                    <div id="wrapperDistrict" class="b-filter__form-item droplist">
+                      <select id="district">
+                        <option data-title value="all">Все районы</option>
+                        <option>Ilion</option>
+                        <option>Petroupoli</option>
+                        <option>Peristeri</option>
+                      </select>
                     </div>
+
                     <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
                   </form>
 
