--- a/www/edit-my-profile.html
+++ b/www/edit-my-profile.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/slim.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist1.css">
     <link rel="stylesheet" type="text/css" href="css/styles-edit-my-profile.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -33,10 +33,12 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery.dropList.1.0.0.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
   </head>
   <body>
@@ -126,36 +128,48 @@
                   <p><input type="text" name="birth" id="birth" value=""><span></span></p>
                 </div>
 
+
+
                 <div class="b-edit__form-item m-form-item-inline">
                   <div class="b-form-item-title text bold">Страна/Город</div>
-                  <div class="droplist">
-                    <input type="text" id="country" value="" hidden>
-                    <span class="droplist-current text bold tab-input">Выбрать</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Греция</li>
-                      <li class="droplist-item text">Украина</li>
-                      <li class="droplist-item text">Румыния</li>                      <li class="droplist-item text">Греция</li>
-                      <li class="droplist-item text">Украина</li>
-                      <li class="droplist-item text">Румыния</li>                      <li class="droplist-item text">Греция</li>
-                      <li class="droplist-item text">Украина</li>
-                      <li class="droplist-item text">Румыния</li>                      <li class="droplist-item text">Греция</li>
-                      <li class="droplist-item text">Украина</li>
-                      <li class="droplist-item text">Румыния</li>                      <li class="droplist-item text">Греция</li>
-                      <li class="droplist-item text">Украина</li>
-                      <li class="droplist-item text">Румыния</li>                      <li class="droplist-item text">Греция</li>
-                      <li class="droplist-item text">Украина</li>
-                      <li class="droplist-item text">Румыния</li>
-                    </ul>
+
+                  <div id="wrapperCountry" class="droplist">
+                    <select id="country">
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                      <option>Греция</option>
+                      <option>Украина</option>
+                      <option>Румыния</option>
+                    </select>
                   </div>
-                   <div class="droplist" hidden>
-                    <input type="text" id="city" value="" hidden>
-                    <span class="droplist-current text bold tab-input">Выбрать</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">Афины</li>
-                      <li class="droplist-item text">Киев</li>
-                      <li class="droplist-item text">Бухарест</li>
-                    </ul>
+
+                  <div id="wrapperCity" class="droplist" hidden>
+                    <select id="city">
+                      <option>Афины</option>
+                      <option>Киев</option>
+                      <option>Бухарест</option>
+                    </select>
                   </div>
+
                 </div>
 
                 <div class="b-edit__form-item m-form-item-inline">
@@ -165,22 +179,22 @@
 
                 <div class="b-edit__form-item m-form-item_textarea m-form-item-inline">
                   <p class="b-form-item-title"><label for="aboutme" class="tab-input">Обо мне</label></p>
-                  <p><textarea rows="4" cols="50" name="aboutme" id="aboutme"></textarea></p>
+                  <p><textarea rows="4" cols="50" name="aboutme" id="aboutme" class="text tab-input"></textarea></p>
                 </div>
 
                 <div class="b-edit__form-item m-form-item_textarea m-form-item-inline">
                   <p class="b-form-item-title"><label for="hobby" class="tab-input">Увлечения</label></p>
-                  <p><textarea rows="3" cols="50" name="hobby" id="hobby"></textarea></p>
+                  <p><textarea rows="3" cols="50" name="hobby" id="hobby" class="text tab-input"></textarea></p>
                 </div>
 
                 <input type="submit" value="Сохранить" <="" input="" class="button submit-button big tab-input">
 
               </form>
-              
+
             </div>
         </div>
       <script type="text/javascript" src="js/slim.jquery.min.js"></script>
-      <script type="text/javascript" src="js/script-droplist.js"></script>
+      <!-- <script type="text/javascript" src="js/script-droplist.js"></script> -->
       <script type="text/javascript" src="js/script-edit-my-profile.js"></script>
 <!-- Footer -->
       </div>
