--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset-min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist1.css">
     <link rel="stylesheet" type="text/css" href="css/styles-aside-filter.css">
     <link rel="stylesheet" type="text/css" href="css/styles-flea-market.css">
     <link rel="stylesheet" type="text/css" href="css/paginator.css">
@@ -34,6 +34,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery.dropList.1.0.0.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
@@ -47,6 +49,12 @@
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-7">
+          <!-- На активный пункт меню навесить класс .active -->
+            <li><a href="/main.html" title="Главная" class="text bold">Главная</a></li>
+            <li><a href="/news.html" title="Новости" class="text bold">Новости</a></li>
+            <li><a href="/community.html" title="Сообщества" class="text bold">Сообщества</a></li>
+            <li><a href="/company.html" title="Компании" class="text bold">Компании</a></li>
+            <li><a href="/flea-market.html" title="Барахолка" class="text bold active">Барахолка</a></li>
         </ul>
 
         <button class="b-menu__wrapp-login button small text bold col xs-offset-2 xs-1 button-enter" style="display: none;">Войти</button>
@@ -108,7 +116,7 @@
             <div class="block b-ad-block paginator">
 
               <div class="b-main-title title-search">
-                  <h1>Барахолка</h1>
+                  <h1>Все предложения</h1>
                 <div class="b-filter__find">
                   <input type="text" name="search">
                 </div>
@@ -370,18 +378,17 @@
 
               <div class="block b-filter">
                 <div class="b-filter-wrapp">
-                  <h4><span class="all-ad">256</span> обьявлений</h4>
-                  <p class="text"><a href="#">12</span> новых</a></p>
+                  <!-- <h4><span class="all-ad">256</span> обьявлений</h4> -->
                   <form class="b-filter__form" name="filter">
-                    <div class="b-filter__form-item droplist">
-                      <input type="text" id="sector" value="all" hidden>
-                      <span class="droplist-current text bold tab-input">Категории</span>
-                      <ul class="droplist-block">
-                        <li class="droplist-item text">Колесо</li>
-                        <li class="droplist-item text">Авто</li>
-                        <li class="droplist-item text">Диски</li>
-                      </ul>
+                    <div id="wrapperCategory" class="b-filter__form-item droplist">
+                      <select id="category">
+                        <option data-title value="all">Категории</option>
+                        <option>Колесо</option>
+                        <option>Авто</option>
+                        <option>Диски</option>
+                      </select>
                     </div>
+
                     <div class="b-filter__form-item droplist">
                       <input type="text" id="city" value="all" hidden>
                       <span class="droplist-current text bold tab-input">Все марки</span>
