--- a/www/news.html
+++ b/www/news.html
@@ -24,8 +24,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/slim.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-aside-filter.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist1.css">
     <link rel="stylesheet" type="text/css" href="css/paginator.css">
     <link rel="stylesheet" type="text/css" href="css/styles-news.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -34,6 +33,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/jquery.dropList.1.0.0.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
@@ -47,6 +48,12 @@
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-7">
+          <!-- На активный пункт меню навесить класс .active -->
+            <li><a href="/main.html" title="Главная" class="text bold">Главная</a></li>
+            <li><a href="/news.html" title="Новости" class="text bold active">Новости</a></li>
+            <li><a href="/community.html" title="Сообщества" class="text bold">Сообщества</a></li>
+            <li><a href="/company.html" title="Компании" class="text bold">Компании</a></li>
+            <li><a href="/flea-market.html" title="Барахолка" class="text bold">Барахолка</a></li>
         </ul>
 
         <button class="b-menu__wrapp-login button small text bold col xs-offset-2 xs-1 button-enter" style="display: none;">Войти</button>
@@ -108,12 +115,6 @@
 
               <div class="b-main-title title-search">
                 <h1>Лента</h1>
-                <div class="b-filter__switch">
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="news">Новости</a>
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="blogs">Блоги</a>
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="posts">Посты</a>
-                  <a href="#" class="b-filter__switch-item text bold" data-filter-category="logbooks">Бортовые журналы</a>
-                </div>
                 <div class="b-filter__find">
                   <input type="text" name="search">
                 </div>
@@ -324,51 +325,68 @@
               <a href="add-blog.html" title="" class="button middle add-button">Добавить пост</a>
             </div>
 
+            <div class="block b-filter">
+              <div id="wrapperCategory" class="b-filter__switch droplist">
+                <select id="category">
+                  <option data-title>Новости</option>
+                  <option>Блоги</option>
+                  <option>Посты</option>
+                  <option>Бортовые журналы</option>
+                </select>
+              </div>
+            </div>
+
             <div class="block b-popular">
               <div class="b-popular__wrapp">
-
                 <h4>Популярное</h4>
-                
-                <form class="b-filter__form" name="filter">
-                  <div class="b-filter__form-item droplist">
-                    <input type="text" id="category" value="all" hidden>
-                    <span class="droplist-current text bold tab-input">За вчера</span>
-                    <ul class="droplist-block">
-                      <li class="droplist-item text">За вчера</li>
-                      <li class="droplist-item text">За неделю</li>
-                      <li class="droplist-item text">За месяц</li>
-                      <li class="droplist-item text">За год</li>
-                    </ul>
+                  <div id="wrapperDate" class="b-filter__switch droplist">
+                    <select id="date">
+                      <option data-title>За вчера</option>
+                      <option>За неделю</option>
+                      <option>За месяц</option>
+                      <option>За год</option>
+                    </select>
                   </div>
-                </form>
-              
+                </div>
                 <div class="b-popular__item item">
-                  <img src="img/temp/auto/2.png" alt="" class="b-news__inner-item-img">
+                  <figure class="b-news__inner-item-img">
+                    <img src="img/temp/auto/2.png" alt="">
+                  </figure>
                   <a href="#" class="text bold" data-clamp>Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                 </div>
 
                 <div class="b-popular__item item">
-                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                  <figure class="b-news__inner-item-img">
+                    <img src="img/temp/img-previous-1.jpg" alt="">
+                  </figure>
                   <a href="#" class="text bold" data-clamp>В париже представлен новый Mitsubishi L200</a>
                 </div>
 
                 <div class="b-popular__item item">
-                  <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-news__inner-item-img">
+                  <figure class="b-news__inner-item-img">
+                    <img src="img/temp/e5ac4aes-480.jpg" alt="">
+                  </figure>
                   <a href="#" class="text bold" data-clamp>Наш опыт восстановления  по оригинальным чертежам</a>
                 </div>
 
                 <div class="b-popular__item item">
-                  <img src="img/temp/auto/9.png" alt="" class="b-news__inner-item-img">
+                  <figure class="b-news__inner-item-img">
+                    <img src="img/temp/auto/9.png" alt="">
+                  </figure>
                   <a href="#" class="text bold" data-clamp>В париже представлен новый Mitsubishi L200</a>
                 </div>
 
                 <div class="b-popular__item item">
-                  <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                  <figure class="b-news__inner-item-img">
+                    <img src="img/temp/img-previous-2.jpg" alt="">
+                  </figure>
                   <a href="#" class="text bold" data-clamp>Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                 </div>
 
                 <div class="b-popular__item item">
-                  <img src="img/temp/auto/10.jpg" alt="" class="b-news__inner-item-img">
+                  <figure class="b-news__inner-item-img">
+                    <img src="img/temp/auto/10.jpg" alt="">
+                  </figure>
                   <a href="#" class="text bold" data-clamp>Как научить Рено Дастер плавать или не повторяйте моих ошибок. Как научить Рено Дастер плавать или не повторяйте моих ошибокКак научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                 </div>
 
